fix: fixing width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 
 .main-content {
   background-color: aliceblue;
-  width: 800px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 1rem;
   text-align: left;
